src/components/context/Context.scss
.ctx_card {
    min-width: 740px;
    width: 100%;
    height: 523px;
    background-color: #D9D9D9;
    border-radius: 16px;
    display: flex;
    flex-direction: column;
    justify-content: end;
    cursor: pointer;
    background-position: center;
    background-repeat: no-repeat, repeat;
    background-size: cover;

    .ctx_card_cont {
        color: white;
        // mix-blend-mode: difference;
        // text-shadow: 1px 1px 2px #000000;
        text-shadow: 1px 1px 4px #00000052;
        background: linear-gradient(#00000000, #00000075);
        border-radius: 0px 0px 16px 16px;
        padding: 24px 16px 16px 16px;

        div:nth-child(1) {
            font-size: 24px;
            font-weight: 600;
        }
    
        div:nth-child(2) {
            font-size: 16px;
            font-weight: 300;
        }
    }
}

.ctx_cont {
    position: fixed;
    height: 100vh;
    width: 100vw;
    top: 0;
    left: 0;
    z-index: 100;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    flex-direction: column;
    align-items: end;

    .ctx_close_ph {
        display: none;
    }

    .ctx_subcont {
        padding: 64px;
        display: flex;
        flex-direction: column;
        gap: 64px;
        background-color: #FAFAFA;
        height: 100%;
        align-items: end;
        width: 40vw;
        overflow-y: scroll;
        

        .ctx_close {
            font-size: 16px;
            display: flex;
            flex-direction: row;
            align-items: center;
            justify-content: center;
            gap: 8px;
            cursor: pointer;
            padding: 8px 16px;
            border: 2px solid rgba(0, 0, 0, 0.5);
            border-radius: 4px;

            img {
                height: 18px;
            }
        }

        .ctx_details {
            display: flex;
            flex-direction: column;
            gap: 40px;

            .ctx_inner_cover {
                height: 523px;
                background-position: center;
                background-repeat: no-repeat, repeat;
                background-size: cover;
                border-radius: 16px;
            }

            .ctx_intro {
                display: flex;
                flex-direction: column;
                gap: 8px;

                div:nth-child(1) {
                    font-size: 24px;
                    font-weight: 600;
                }
            }
        }
    }
}

@media screen and (max-width: 810px) {
    .ctx_card {
        min-width: 525px;
        width: 100%;
        height: 525px;
    }

    .ctx_cont {

        .ctx_subcont {
            padding: 24px;
            width: auto;
        }
    }
}

@media screen and (max-width: 460px) {
    .ctx_card {
        min-width: 350px;
        width: 100%;
        height: 500px;
    }

    .ctx_cont {
        gap: 40px;
        padding-top: 64px;
        align-items: center;

        .ctx_close_ph {
            display: block;
            background-color: rgba(0, 0, 0, 0.5);
            width: max-content;
            display: flex;
            align-items: center;
            justify-content: center;
            padding: 16px;
            border-radius: 99px;

        }

        .ctx_subcont {
            border-radius: 32px 32px 0px 0px;

            .ctx_close {
                display: none;
            }

            .ctx_details {
                font-size: 16px;
            }
        }
    }
}

